# CarPark_ComputerVision

./: .gitignore  CarParkPos  README.md  carPark_initialize.py  load_data.py  main.py  parkinglot_data.json  pyproject.toml  requirements.txt  vidtest.py
notebooks/: train.ipynb
src/api/: api.py  utils.py
src/api/inference/: by_pixel.py  ml.py
src/api/predict/: vanilla.py
src/config/: config.py
src/cv_carpark/: __main__.py  config.py
src/cv_carpark/components/: lotchecker.py  maskgenerator.py  utils.py  videosource.py
src/parking_lot/: parking_lot.py
src/shared_utils/: img_preprocess.py
src/streamlit_app/: app.py  dockerfile  inference.py  requirements.txt  utils.py
src/utils/: img_preprocess.py
