[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cv_carpark"
version = "1.0.0"
authors = [
    {name = "Richard Joseph Omega", email = "richardjoseph.omega@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python == 4.7.0.72",
    "numpy == 1.24.2",
    "streamlit == 1.39.0",
    "streamlit-drawable-canvas == 0.9.3",
    "fastapi == 0.115.0"
]

[project.scripts]
cv_carpark = "cv_carpark.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "black==23.12.1"
]

